--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,7 @@ dmypy.json
 .history
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,django
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
